<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".single_post">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            tools:textSize="28sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/gambar_post"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/game1" />

    <Button
        android:id="@+id/likeButton"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambar_post" />

    <TextView
        android:id="@+id/jmlh_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jmlh_like"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/likeButton"
        app:layout_constraintTop_toBottomOf="@+id/gambar_post"
        android:textSize="18sp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/judul_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/judul"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambar_post" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isi_konten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/judul_artikel" />

</androidx.constraintlayout.widget.ConstraintLayout>